--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,21 @@
+2020-01-30  Alex Christensen  <achristensen@webkit.org>
+
+        Add WKNavigationDelegate SPI to disable TLS 1.0 and 1.1
+        https://bugs.webkit.org/show_bug.cgi?id=206979
+
+        Reviewed by Brady Eidson.
+
+        * MiniBrowser/mac/SettingsController.m:
+        * TestWebKitAPI/Tests/WebKitCocoa/TLSDeprecation.mm:
+        (-[TLSNavigationDelegate waitForDidFinishNavigation]):
+        (-[TLSNavigationDelegate waitForDidFailProvisionalNavigation]):
+        (-[TLSNavigationDelegate receivedShouldAllowLegacyTLS]):
+        (-[TLSNavigationDelegate webView:didReceiveAuthenticationChallenge:completionHandler:]):
+        (-[TLSNavigationDelegate webView:didFinishNavigation:]):
+        (-[TLSNavigationDelegate webView:didFailProvisionalNavigation:withError:]):
+        (-[TLSNavigationDelegate _webView:authenticationChallenge:shouldAllowLegacyTLS:]):
+        (TestWebKitAPI::TEST):
+
 2020-01-30  Jonathan Bedard  <jbedard@apple.com>
 
         PAL: Remove old iOS version macros
