Unreviewed, another speculative test fix after r255041
Source/WebKit:

* UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
(WebKit::MockLocalConnection::getAttestation const):
Adds kSecAttrAccessible: kSecAttrAccessibleAfterFirstUnlock to secItem to bypass
potential error due to screen locks.

Tools:

* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::addTestKeyToKeychain):
Adds kSecAttrAccessible: kSecAttrAccessibleAfterFirstUnlock to secItem to bypass
potential error due to screen locks.

Canonical link: https://commits.webkit.org/220035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255466 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Jiewen Tan  <jiewen_tan@apple.com>
+
+        Unreviewed, another speculative test fix after r255041
+
+        * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
+        (WebKit::MockLocalConnection::getAttestation const):
+        Adds kSecAttrAccessible: kSecAttrAccessibleAfterFirstUnlock to secItem to bypass
+        potential error due to screen locks.
+
 2020-01-30  Alex Christensen  <achristensen@webkit.org>
 
         Add WKNavigationDelegate SPI to disable TLS 1.0 and 1.1
