`FALLTHROUGH` macro isn't properly defined when building Objective-C files using Clang https://bugs.webkit.org/show_bug.cgi?id=206637
Reviewed by Darin Adler.

Allow the `FALLTHROUGH` macro to be defined properly when building with either GCC
or Clang.

* wtf/Compiler.h:


Canonical link: https://commits.webkit.org/220036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255467 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,15 @@
+2020-01-30  Conrad Shultz  <conrad_shultz@apple.com>
+
+        `FALLTHROUGH` macro isn't properly defined when building Objective-C files using Clang
+        https://bugs.webkit.org/show_bug.cgi?id=206637
+
+        Reviewed by Darin Adler.
+
+        Allow the `FALLTHROUGH` macro to be defined properly when building with either GCC
+        or Clang.
+
+        * wtf/Compiler.h:
+
 2020-01-30  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [WTF] Remove PackedIntVector
