[WebGL] Add logging statements to attempt to catch texture-upload-size.html timeout https://bugs.webkit.org/show_bug.cgi?id=207006
Source/WebCore:

Unreviewed temporary logging additions for flaky timeout investigation.


* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::bindTexture):
(WebCore::WebGLRenderingContextBase::createTexture):
(WebCore::WebGLRenderingContextBase::getError):
(WebCore::WebGLRenderingContextBase::texSubImage2D):
(WebCore::WebGLRenderingContextBase::texImage2D):
* platform/graphics/opengl/GraphicsContextGLOpenGLBase.cpp:
(WebCore::GraphicsContextGLOpenGL::texImage2D):
* platform/graphics/opengl/GraphicsContextGLOpenGLCommon.cpp:
(WebCore::GraphicsContextGLOpenGL::bindTexture):
(WebCore::GraphicsContextGLOpenGL::getError):
(WebCore::GraphicsContextGLOpenGL::texSubImage2D):
(WebCore::GraphicsContextGLOpenGL::createTexture):

LayoutTests:

Unreviewed temporary logging additions caused unrelated tests to time out.


* TestExpectations:


Canonical link: https://commits.webkit.org/220037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255468 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Justin Fan  <justin_fan@apple.com>
+
+        [WebGL] Add logging statements to attempt to catch texture-upload-size.html timeout
+        https://bugs.webkit.org/show_bug.cgi?id=207006
+
+        Unreviewed temporary logging additions caused unrelated tests to time out.
+
+        * TestExpectations:
+
 2020-01-30  Ryan Haddad  <ryanhaddad@apple.com>
 
         Regression: fast/hidpi/image-srcset-relative-svg-canvas-2x.html is consistently failing on iOS EWS
