--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS Release wk2 ] imported/w3c/IndexedDB-private-browsing/idbindex_getKey6.html is flaky timing out.
+        https://bugs.webkit.org/show_bug.cgi?id=206952
+
+        Unreviewed test gardening.
+
+        * platform/ios-simulator-wk2/TestExpectations:
+
 2020-01-30  Justin Fan  <justin_fan@apple.com>
 
         [WebGL] Add logging statements to attempt to catch texture-upload-size.html timeout
