--- a/Source/WebKitLegacy/mac/ChangeLog
+++ b/Source/WebKitLegacy/mac/ChangeLog
@@ -1,3 +1,7 @@
+2020-01-30  Alan Coon  <alancoon@apple.com>
+
+        Revert r254584. rdar://problem/59045533
+
 2020-01-15  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r254187. rdar://problem/58605950
