--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,15 @@
+2020-01-30  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Regression: http/tests/loading/remove-child-triggers-parser.html is failing consistently on windows
+        https://bugs.webkit.org/show_bug.cgi?id=206992
+
+        Reviewed by Simon Fraser.
+
+        Added back html & body elements to make Windows bots happy.
+
+        * http/tests/loading/remove-child-triggers-parser-expected.txt:
+        * http/tests/loading/remove-child-triggers-parser.html:
+
 2020-01-30  Jason Lawrence  <lawrence.j@apple.com>
 
         [ iOS Release wk2 ] imported/w3c/IndexedDB-private-browsing/idbindex_getKey6.html is flaky timing out.
