--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,15 @@
 2020-01-30  Ryosuke Niwa  <rniwa@webkit.org>
 
+        REGRESSION: [Mac wk1] imported/w3c/web-platform-tests/mathml/presentation-markup/scripts/underover-parameters-3.html is a flakey failure
+        https://bugs.webkit.org/show_bug.cgi?id=205168
+        <rdar://problem/57880452>
+
+        Removed the flaky test expectation now that the test is no longer flaky.
+
+        * platform/mac-wk1/TestExpectations:
+
+2020-01-30  Ryosuke Niwa  <rniwa@webkit.org>
+
         Regression: http/tests/loading/remove-child-triggers-parser.html is failing consistently on windows
         https://bugs.webkit.org/show_bug.cgi?id=206992
 
