--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2020-01-31  Don Olmstead  <don.olmstead@sony.com>
+
+        [CMake] Add _PRIVATE_LIBRARIES to framework
+        https://bugs.webkit.org/show_bug.cgi?id=207004
+
+        Reviewed by Konstantin Tokarev.
+
+        Use _PRIVATE_LIBRARIES to when creating a WebKit target to specify privately linked
+        libraries. This fits with the current conventions in WebKit for CMake libraries and
+        prevents appending to _LIBRARIES with a visibility modifier which likely has
+        unintended consequences.
+
+        * Source/cmake/WebKitMacros.cmake:
+
 2020-01-30  Ross Kirsling  <ross.kirsling@sony.com>
 
         [CMake] Add SQLite::SQLite3 target
