--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,18 @@
+2020-01-31  Don Olmstead  <don.olmstead@sony.com>
+
+        [CMake] Add _PRIVATE_LIBRARIES to framework
+        https://bugs.webkit.org/show_bug.cgi?id=207004
+
+        Reviewed by Konstantin Tokarev.
+
+        Move uses of PRIVATE within _LIBRARIES to _PRIVATE_LIBRARIES. Any _LIBRARIES appended
+        afterwards will have that visibility set erroneously.
+
+        * CMakeLists.txt:
+        * PlatformFTW.cmake:
+        * PlatformGTK.cmake:
+        * PlatformWin.cmake:
+
 2020-01-31  Zan Dobersek  <zdobersek@igalia.com>
 
         [WPE] Touch-based scrolling roundtrips through the WebProcess
