--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,20 @@
+2020-01-31  David Quesada  <david_quesada@apple.com>
+
+        Remove unused WKProcessPool downloads SPI
+        https://bugs.webkit.org/show_bug.cgi?id=207029
+        rdar://problem/59052066
+
+        Reviewed by Anders Carlsson.
+
+        Remove two unused SPI for starting/resuming downloads from a process pool. These methods were
+        deprecated in favor of variants that also require a WKWebsiteDataStore, and all clients of these
+        methods have switched to the new versions.
+
+        * UIProcess/API/Cocoa/WKProcessPool.mm:
+        (-[WKProcessPool _downloadURLRequest:originatingWebView:]): Deleted.
+        (-[WKProcessPool _resumeDownloadFromData:path:originatingWebView:]): Deleted.
+        * UIProcess/API/Cocoa/WKProcessPoolPrivate.h:
+
 2020-01-31  Don Olmstead  <don.olmstead@sony.com>
 
         [CMake] Add _PRIVATE_LIBRARIES to framework
