--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,16 @@
+2020-01-31  Alejandro G. Castro  <alex@igalia.com>
+
+        Compilation broken without service workers
+        https://bugs.webkit.org/show_bug.cgi?id=207037
+
+        Reviewed by Chris Dumez.
+
+        Protect the use of m_swServers, check if the SERVICE_WORKER is
+        enabled.
+
+        * NetworkProcess/NetworkProcess.cpp:
+        (WebKit::NetworkProcess::lowMemoryHandler):
+
 2020-01-31  David Quesada  <david_quesada@apple.com>
 
         Remove unused WKProcessPool downloads SPI
