--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-31  Cathie Chen  <cathiechen@igalia.com>
+
+        Asynchronous scrolling of overflow element can enter a recursive loop
+        https://bugs.webkit.org/show_bug.cgi?id=206884
+
+        Reviewed by Frédéric Wang.
+
+        * fast/scrolling/ios/programmatic-scroll-element-crash-expected.txt: Added.
+        * fast/scrolling/ios/programmatic-scroll-element-crash.html: Added.
+
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOSwk1 ] imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/seeking/seek-to-currentTime.html is flaky failing
