--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Matt Lewis  <jlewis3@apple.com>
+
+        Layout Test imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html is a Flaky Failure on mac
+        https://bugs.webkit.org/show_bug.cgi?id=201481
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
 2020-01-31  Cathie Chen  <cathiechen@igalia.com>
 
         Asynchronous scrolling of overflow element can enter a recursive loop
