--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,20 @@
+2020-01-31  Brent Fulgham  <bfulgham@apple.com>
+
+        REGRESSION (r251511): [iOS] HDR Playback broken
+        https://bugs.webkit.org/show_bug.cgi?id=207052
+        <rdar://problem/58975614>
+
+        Reviewed by Maciej Stachowiak.
+
+        I missed an XPC service in Bug 203318 when I stopped importing the 'common.sb' sandbox. This broke some
+        aspects of HDR playback for certain clients.
+
+        This patch returns the XPC service, and unblocks access to a network preference file that AVFoundation
+        needs to read to support some media playback features.
+
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb:
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:
+
 2020-01-31  Alejandro G. Castro  <alex@igalia.com>
 
         Compilation broken without service workers
