--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-01-31  Antoine Quint  <graouts@apple.com>
+
+        [Web Animations] [WK1] REGRESSION: opacity doesn't animate
+        https://bugs.webkit.org/show_bug.cgi?id=207044
+        <rdar://problem/59061225>
+
+        Reviewed by Simon Fraser.
+
+        * webanimations/opacity-animation-expected.html: Added.
+        * webanimations/opacity-animation.html: Added.
+
 2020-01-31  Matt Lewis  <jlewis3@apple.com>
 
         Layout Test imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html is a Flaky Failure on mac
