[ews] add build step to set custom build summary https://bugs.webkit.org/show_bug.cgi?id=207026
Reviewed by Jonathan Bedard.

* BuildSlaveSupport/ews-build/steps.py:
(SetBuildSummary.doStepIf): Run this step only if build_summary property is set.
(SetBuildSummary.hideStepIf): Hide this step if it is not executed.
(SetBuildSummary.start):


Canonical link: https://commits.webkit.org/220067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255506 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,15 @@
+2020-01-31  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] add build step to set custom build summary
+        https://bugs.webkit.org/show_bug.cgi?id=207026
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        (SetBuildSummary.doStepIf): Run this step only if build_summary property is set.
+        (SetBuildSummary.hideStepIf): Hide this step if it is not executed.
+        (SetBuildSummary.start):
+
 2020-01-31  Jonathan Bedard  <jbedard@apple.com>
 
         results.webkit.org: Handle modified firewall rules
