--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,17 @@
+2020-01-31  David Kilzer  <ddkilzer@apple.com>
+
+        REGRESSION: [ iPadOS ] imported/w3c/web-platform-tests/dom/events/Event-dispatch-on-disabled-elements.html always fails
+        <https://webkit.org/b/206759>
+        <rdar://problem/58872607>
+
+        Reviewed by Brent Fulgham.
+
+        Test: imported/w3c/web-platform-tests/dom/events/Event-dispatch-on-disabled-elements.html
+
+        * Platform/spi/ios/UIKitSPI.h:
+        (-[UIViewController isPerformingModalTransition]): Add SPI
+        declaration.
+
 2020-01-31  Brent Fulgham  <bfulgham@apple.com>
 
         REGRESSION (r251511): [iOS] HDR Playback broken
