--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk2 ] inspector/page/setBootstrapScript-sub-frame.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207053
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
 2020-01-31  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Unmatched ] or } brackets should be syntax errors in Unicode patterns only
