--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS wk2 release ] media/track/texttrackcue/texttrackcue-displaycue.html
+        https://bugs.webkit.org/show_bug.cgi?id=207055
+
+        Unreviewed test gardening.
+
+        * platform/ios-simulator-wk2/TestExpectations:
+
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk2 ] inspector/page/setBootstrapScript-sub-frame.html is flaky failing
