--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,16 @@
 2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
 
+        [ Mac ] animations/animation-welcome-safari.html is sometimes failing
+        https://bugs.webkit.org/show_bug.cgi?id=206604
+
+        Unreviewed test gardening.
+
+        Updated test expectations to align with existing bug.
+
+        * platform/mac/TestExpectations:
+
+2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
+
         [ iOS wk2 release ] media/track/texttrackcue/texttrackcue-displaycue.html
         https://bugs.webkit.org/show_bug.cgi?id=207055
 
