--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS iOS ] imported/w3c/web-platform-tests/IndexedDB/keypath-special-identifiers.htm is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207057
+
+        Unreviewed test gardening.
+
+        * platform/ios/TestExpectations:
+        * platform/mac/TestExpectations:
+
 2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
 
         [ Mac ] animations/animation-welcome-safari.html is sometimes failing
