--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS wk1 ] imported/w3c/web-platform-tests/IndexedDB/interleaved-cursors-small.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207059
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS iOS ] imported/w3c/web-platform-tests/IndexedDB/keypath-special-identifiers.htm is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=207057
 
