[ews] Display flaky test names in build summary when ReRunWebKitTests passes https://bugs.webkit.org/show_bug.cgi?id=207050
Reviewed by Jonathan Bedard.

* BuildSlaveSupport/ews-build/steps.py:
(ReRunWebKitTests.evaluateCommand):


Canonical link: https://commits.webkit.org/220074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255513 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-31  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Display flaky test names in build summary when ReRunWebKitTests passes
+        https://bugs.webkit.org/show_bug.cgi?id=207050
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        (ReRunWebKitTests.evaluateCommand):
+
 2020-01-31  David Kilzer  <ddkilzer@apple.com>
 
         REGRESSION: [ iPadOS ] imported/w3c/web-platform-tests/dom/events/Event-dispatch-on-disabled-elements.html always fails
