--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ Mac ] imported/w3c/web-platform-tests/media-source/mediasource-replay.html flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207062
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk2 ] fast/scrolling/latching/scroll-div-with-nested-nonscrollable-iframe.html is flaky failing
