--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-31  Kate Cheney  <katherine_cheney@apple.com>
+
+        Add page configuration additions to APIPageConfiguration
+        https://bugs.webkit.org/show_bug.cgi?id=206090
+        <rdar://problem/58489766>
+
+        Reviewed by Andy Estes.
+
+        * UIProcess/API/APIPageConfiguration.cpp:
+
 2020-01-31  David Kilzer  <ddkilzer@apple.com>
 
         REGRESSION: [ iPadOS ] imported/w3c/web-platform-tests/dom/events/Event-dispatch-on-disabled-elements.html always fails
