--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-31  Chris Dumez  <cdumez@apple.com>
+
+        [ iOS ] imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=206934
+        <rdar://problem/58991581>
+
+        Unskip test which should no longer be flaky.
+
+        * platform/ios-wk2/TestExpectations:
+
 2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
 
         [ Mac ] imported/w3c/web-platform-tests/media-source/mediasource-replay.html flaky failing.
