--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,12 @@
 2020-01-31  Chris Dumez  <cdumez@apple.com>
 
+        Unreviewed macOS build fix after r255518
+
+        * UIProcess/WebPageProxy.cpp:
+        (WebKit::WebPageProxy::handleGestureEvent):
+
+2020-01-31  Chris Dumez  <cdumez@apple.com>
+
         [ iOS ] imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker.html is flaky failing.
         https://bugs.webkit.org/show_bug.cgi?id=206934
         <rdar://problem/58991581>
