--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk1 ] editing/execCommand/insert-nested-lists.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207066
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
 2020-01-31  Chris Dumez  <cdumez@apple.com>
 
         [ iOS ] imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker.html is flaky failing.
