--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,16 @@
+2020-01-31  Alex Christensen  <achristensen@webkit.org>
+
+        Add KVO SPI WKWebView._negotiatedLegacyTLS
+        https://bugs.webkit.org/show_bug.cgi?id=207067
+
+        Reviewed by Andy Estes.
+
+        * TestWebKitAPI/Tests/WebKitCocoa/TLSDeprecation.mm:
+        (-[TLSObserver observeValueForKeyPath:ofObject:change:context:]):
+        (-[TLSObserver waitUntilNegotiatedLegacyTLSChanged]):
+        (TestWebKitAPI::TEST):
+        * TestWebKitAPI/config.h:
+
 2020-01-31  Aakash Jain  <aakash_jain@apple.com>
 
         [ews] Display flaky test names in build summary when ReRunWebKitTests passes
