--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ Mac wk1 ] fast/images/animated-gif-restored-from-bfcache.html is a flaky failure
+        https://bugs.webkit.org/show_bug.cgi?id=206950
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk1 ] editing/execCommand/insert-nested-lists.html is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=207066
 
