--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS Debug wk2 ] animations/keyframe-autoclose-brace.html is flaky crashing.
+        https://bugs.webkit.org/show_bug.cgi?id=207071
+
+        Unreviewed test gardening.
+
+        * platform/ipad/TestExpectations:
+
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ Mac wk1 ] fast/images/animated-gif-restored-from-bfcache.html is a flaky failure
