--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+       [ Mac wk2 ] tiled-drawing/scrolling/fast-scroll-select-latched-mainframe-with-handler.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=206940
+
+        Also is happening on release so I updated the expectation to reflect that.
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-01-31  Jason Lawrence  <lawrence.j@apple.com>
 
         [ iOS Debug wk2 ] animations/keyframe-autoclose-brace.html is flaky crashing.
