Unreviewed build fix after r255522.
* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:dataTask:didReceiveResponse:completionHandler:]):
Switched to a C-style cast.

Canonical link: https://commits.webkit.org/220086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255527 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,11 @@
+2020-01-31  Andy Estes  <aestes@apple.com>
+
+        Unreviewed build fix after r255522.
+
+        * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
+        (-[WKNetworkSessionDelegate URLSession:dataTask:didReceiveResponse:completionHandler:]):
+        Switched to a C-style cast.
+
 2020-01-31  Alex Christensen  <achristensen@webkit.org>
 
         Add KVO SPI WKWebView._negotiatedLegacyTLS
