--- a/JSTests/ChangeLog
+++ b/JSTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-31  Saam Barati  <sbarati@apple.com>
+
+        GetGetterSetterByOffset and GetGetter/GetSetter are not always safe to execute
+        https://bugs.webkit.org/show_bug.cgi?id=206805
+        <rdar://problem/58898161>
+
+        Reviewed by Yusuke Suzuki.
+
+        * stress/get-getter-setter-by-offset-not-always-safe-to-execute.js: Added.
+
 2020-01-31  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Unmatched ] or } brackets should be syntax errors in Unicode patterns only
