--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,24 @@
+2020-01-31  Saam Barati  <sbarati@apple.com>
+
+        GetGetterSetterByOffset and GetGetter/GetSetter are not always safe to execute
+        https://bugs.webkit.org/show_bug.cgi?id=206805
+        <rdar://problem/58898161>
+
+        Reviewed by Yusuke Suzuki.
+
+        This patch fixes two bugs. The first is GetGetterSetterByOffset. Previously,
+        we were just checking that we could load the value safely. However, because
+        GetGetterSetterByOffset returns a GetterSetter object, we can only safely
+        move this node into a context where it's guaranteed that the offset loaded
+        will return a GetterSetter.
+        
+        The second fix is GetGetter/GetSetter were both always marked as safe to execute.
+        However, they're only safe to execute when the incoming value to load from
+        is a GetterSetter object.
+
+        * dfg/DFGSafeToExecute.h:
+        (JSC::DFG::safeToExecute):
+
 2020-01-31  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Unmatched ] or } brackets should be syntax errors in Unicode patterns only
