--- a/JSTests/ChangeLog
+++ b/JSTests/ChangeLog
@@ -1,5 +1,11 @@
 2020-01-31  Saam Barati  <sbarati@apple.com>
 
+        Unreviewed. Don't dump disassembly in test.
+
+        * stress/get-getter-setter-by-offset-not-always-safe-to-execute.js:
+
+2020-01-31  Saam Barati  <sbarati@apple.com>
+
         GetGetterSetterByOffset and GetGetter/GetSetter are not always safe to execute
         https://bugs.webkit.org/show_bug.cgi?id=206805
         <rdar://problem/58898161>
