--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-01-31  Justin Fan  <justin_fan@apple.com>
+
+        [WebGL] Revert logging added to investigate 205757
+        https://bugs.webkit.org/show_bug.cgi?id=207076
+
+        Unreviewed.
+        
+        Revert https://trac.webkit.org/changeset/255468.
+
+        * TestExpectations:
+
 2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk2 ] webgpu/whlsl/textures-sample-level.html is flaky failing
