--- a/Source/WebCore/PAL/ChangeLog
+++ b/Source/WebCore/PAL/ChangeLog
@@ -1,3 +1,15 @@
+2020-01-31  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        Add support for specifying background colors when setting marked text
+        https://bugs.webkit.org/show_bug.cgi?id=207065
+        <rdar://problem/57876140>
+
+        Reviewed by Tim Horton.
+
+        Add an SPI soft-linking declaration for NSMarkedClauseSegmentAttributeName.
+
+        * pal/spi/cocoa/NSAttributedStringSPI.h:
+
 2020-01-30  Alex Christensen  <achristensen@webkit.org>
 
         Add WKNavigationDelegate SPI to disable TLS 1.0 and 1.1
