--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,42 @@
+2020-01-31  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        Add support for specifying background colors when setting marked text
+        https://bugs.webkit.org/show_bug.cgi?id=207065
+        <rdar://problem/57876140>
+
+        Reviewed by Tim Horton.
+
+        Implement -setAttributedMarkedText:selectedRange: on WKContentView, and have it extract highlight color
+        information from the given attributed string. Plumb this through to the web process by serializing and
+        deserializing `WebCore::CompositionHighlight`s.
+
+        * UIProcess/Cocoa/WebViewImpl.mm:
+        (WebKit::WebViewImpl::setMarkedText):
+        * UIProcess/WebPageProxy.cpp:
+        * UIProcess/WebPageProxy.h:
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (compositionHighlights):
+
+        For each marked text clause, grab the specified background color (defaulting to Color::compositionFill) and use
+        it to create a list of CompositionHighlights.
+
+        (-[WKContentView setAttributedMarkedText:selectedRange:]):
+        (-[WKContentView setMarkedText:selectedRange:]):
+        (-[WKContentView _setMarkedText:highlights:selectedRange:]):
+        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
+        (WKBundlePageSetComposition):
+
+        Add testing support for specifying highlight ranges when setting marked text.
+
+        * WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:
+        * WebProcess/WebCoreSupport/glib/WebEditorClientGLib.cpp:
+        (WebKit::WebEditorClient::didDispatchInputMethodKeydown):
+        * WebProcess/WebPage/WebPage.cpp:
+        (WebKit::WebPage::setCompositionForTesting):
+        (WebKit::WebPage::setCompositionAsync):
+        * WebProcess/WebPage/WebPage.h:
+        * WebProcess/WebPage/WebPage.messages.in:
+
 2020-01-31  Andy Estes  <aestes@apple.com>
 
         Unreviewed build fix after r255522.
