--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,36 @@
+2020-01-31  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        Add support for specifying background colors when setting marked text
+        https://bugs.webkit.org/show_bug.cgi?id=207065
+        <rdar://problem/57876140>
+
+        Reviewed by Tim Horton.
+
+        Add support in WebKitTestRunner for specifying a list of highlight ranges when setting marked text. This comes
+        in the form of an additional argument to TextInputController::setMarkedText, which contains an array of objects,
+        each describing one range (in the composition) to highlight.
+
+        * DumpRenderTree/ios/TextInputControllerIOS.m:
+        (+[TextInputController isSelectorExcludedFromWebScript:]):
+        (+[TextInputController webScriptNameForSelector:]):
+        (-[TextInputController setMarkedText:selectedFrom:length:suppressUnderline:highlights:]):
+        (-[TextInputController setMarkedText:selectedFrom:length:suppressUnderline:]): Deleted.
+        * DumpRenderTree/mac/TextInputControllerMac.m:
+        (+[TextInputController isSelectorExcludedFromWebScript:]):
+        (+[TextInputController webScriptNameForSelector:]):
+        (-[TextInputController setMarkedText:selectedFrom:length:suppressUnderline:highlights:]):
+        (-[TextInputController setMarkedText:selectedFrom:length:suppressUnderline:]): Deleted.
+        * WebKitTestRunner/InjectedBundle/Bindings/TextInputController.idl:
+        * WebKitTestRunner/InjectedBundle/TextInputController.cpp:
+        (WTR::arrayLength):
+        (WTR::createCompositionHighlightData):
+
+        Add logic to convert a given JSObject containing the composition highlight information into a WKArrayRef, which
+        is then passed into WebKit via WKBundlePageSetComposition.
+
+        (WTR::TextInputController::setMarkedText):
+        * WebKitTestRunner/InjectedBundle/TextInputController.h:
+
 2020-01-31  Alex Christensen  <achristensen@webkit.org>
 
         Add KVO SPI WKWebView._negotiatedLegacyTLS
