--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-31  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        Flaky Test: imported/w3c/web-platform-tests/websockets/cookies/007.html
+        https://bugs.webkit.org/show_bug.cgi?id=206484
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
 2020-01-31  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Add support for specifying background colors when setting marked text
