--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,22 @@
 2020-01-31  Saam Barati  <sbarati@apple.com>
 
+        safe to execute should return false when we know code won't be moved
+        https://bugs.webkit.org/show_bug.cgi?id=207074
+
+        Reviewed by Yusuke Suzuki.
+
+        We use safeToExecute to determine inside LICM whether it's safe to execute
+        a node somewhere else in the program. We were returning true for nodes
+        we knew would never be moved, because they were effectful. Things like Call
+        and GetById. This patch makes those nodes return false now, since we want
+        to make it easier to audit the nodes that return true. This makes that audit
+        easier, since it gets rid of the obvious things that will never be hoisted.
+
+        * dfg/DFGSafeToExecute.h:
+        (JSC::DFG::safeToExecute):
+
+2020-01-31  Saam Barati  <sbarati@apple.com>
+
         GetGetterSetterByOffset and GetGetter/GetSetter are not always safe to execute
         https://bugs.webkit.org/show_bug.cgi?id=206805
         <rdar://problem/58898161>
