--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,20 @@
 2020-01-31  Saam Barati  <sbarati@apple.com>
 
+        GetButterfly should check if the input value is an object in safe to execute
+        https://bugs.webkit.org/show_bug.cgi?id=207082
+
+        Reviewed by Mark Lam.
+
+        We can only hoist GetButterfly when we know the incoming value is an object.
+        We might want to reconsider making GetButterfly use ObjectUse as its edge
+        kind, but that's out of the scope of this patch. Currently, we use CellUse
+        for GetButterfly node's child1.
+
+        * dfg/DFGSafeToExecute.h:
+        (JSC::DFG::safeToExecute):
+
+2020-01-31  Saam Barati  <sbarati@apple.com>
+
         safe to execute should return false when we know code won't be moved
         https://bugs.webkit.org/show_bug.cgi?id=207074
 
