--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,32 @@
+2020-01-31  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] DFG::CommonData::shrinkToFit called before DFG::Plan::reallyAdd is called
+        https://bugs.webkit.org/show_bug.cgi?id=207083
+
+        Reviewed by Mark Lam.
+
+        We are calling DFG::CommonData::shrinkToFit, but calling this too early: we execute
+        DFG::Plan::reallyAdd(DFG::CommonData*) after that, and this adds many entries to
+        DFG::CommonData*. We should call DFG::CommonData::shrinkToFit after calling DFG::Plan::reallyAdd.
+
+        To implement it, we make DFG::JITCode::shrinkToFit virtual function in JSC::JITCode. Then, we
+        can also implement FTL::JITCode::shrinkToFit which was previously not implemented.
+
+        * dfg/DFGJITCode.cpp:
+        (JSC::DFG::JITCode::shrinkToFit):
+        * dfg/DFGJITCode.h:
+        * dfg/DFGJITCompiler.cpp:
+        (JSC::DFG::JITCompiler::compile):
+        (JSC::DFG::JITCompiler::compileFunction):
+        * dfg/DFGPlan.cpp:
+        (JSC::DFG::Plan::finalizeWithoutNotifyingCallback):
+        * ftl/FTLJITCode.cpp:
+        (JSC::FTL::JITCode::shrinkToFit):
+        * ftl/FTLJITCode.h:
+        * jit/JITCode.cpp:
+        (JSC::JITCode::shrinkToFit):
+        * jit/JITCode.h:
+
 2020-01-31  Saam Barati  <sbarati@apple.com>
 
         GetButterfly should check if the input value is an object in safe to execute
